Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25319

Long BF log wait turns on InnoDB Monitor output without telling, never turns it off

    XMLWordPrintable

Details

    Description

      We have three situations that turn on InnoDB monitor output into the error log automatically: long semaphore waits, large amount of lock heaps, and long wsrep BF waits

      While the former two print something like " Starting the InnoDB Monitor to print diagnostics." into the error log first, long BF waits don't do this, they just enable the output silently.

      Also while the other two occasions take care of disabling the output at a later point in time, BF long waits do not do so. The log output gets enabled, but can only be disabled again by explicit {{SET GLOBAL innodb_status_output; }} or a node restart, so flooding the log with InnoDB status output every 20 seconds.

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            hholzgra Hartmut Holzgraefe
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1d
                1d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.